<resources>
    <string name="app_name">Drag</string>
    <string name="game_title_string">Welcome to Drag</string>
    <string name="local_value">Local</string>
    <string name="remote_value">Remote</string>
    <string name="game_mode_string">Select a game mode:</string>
    <string name="game_mode_title_string">Game mode:</string>
    <string name="lobby_setup_title_string">Lobby Setup</string>
    <string name="lobby_name_string">Lobby name:</string>
    <string name="n_players_string">Nº of players:</string>
    <string name="n_rounds_string">Nº of rounds:</string>
    <string name="title_activity_setup_game" translatable="false">s</string>
    <string name="create_lobby_string">Create lobby</string>
    <string name="create_lobby_button_string">Create</string>
    <string name="lobby_name_header_string">Lobby name</string>
    <string name="lobby_player_string">Players</string>
    <string name="join_button_string">Join</string>
    <string name="lobby_players" translatable="false">%d/%d</string>
    <string name="ready_string">Ready</string>
    <string name="start_string">Start game</string>
    <string name="n_players_error">Minimum nº of players is %d</string>
    <string name="n_rounds_error">Minimum nº of rouds is %d</string>
    <string name="lobby_name_error">Minimum nº of characters is %d</string>
    <string name="edit_name_value">Edit name</string>
    <string name="player_value">Player%d</string>
    <string name="not_ready_string">Not ready</string>
    <string name="confirm_string">Confirm</string>
    <string name="cancel_string">Cancel</string>
    <string name="player_name_hint">Write your name here (min %d characters)</string>
    <string name="player_state_string">State %d/%d</string>
    <string name="player_name_string">Player name</string>
    <string name="lobby_rounds_string">Rounds</string>
    <string name="rounds_title">Rounds: %d</string>
    <string name="lobby_name_title_string">Lobby name: %s</string>
    <string name="remove_string">Remove</string>
    <string name="start_word_title">Your word:</string>
    <string name="start_word_hint">Write or generate word</string>
    <string name="next_value">Next</string>
    <string name="try_to_draw_string">Try to draw:</string>
    <string name="guess_draw_string">Guess the draw:</string>
    <string name="delete_draw_text">Are you sure you want to delete this draw? This operation cannot be undone</string>
    <string name="rename_operation_error_string">That name already exists in this lobby</string>


</resources>