<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:weightSum="100">


    <TextView
        android:id="@+id/lobby_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:text="@string/lobby_name_header_string"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lobby_rounds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="14"
        android:text="@string/lobby_rounds_string"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/lobby_availability_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="26"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/lobby_player_string"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/join_button_string"
        android:textSize="14sp" />
</LinearLayout>