<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setupLobby.SetupGameActivity">

    <TextView
        android:id="@+id/game_setup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/game_setup_title_string"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/game_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_setup_title"
        android:weightSum="100"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/game_mode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="50"
            android:text="@string/game_mode_title_string"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/current_game_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_weight="50"
            android:text="@string/remote_value"
            android:textAlignment="textStart"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lobby_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_mode_layout"
        app:layout_constraintVertical_bias="0.0"
        android:weightSum="100"
        tools:visibility="visible">

        <TextView
            android:id="@+id/lobby_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="50"
            android:text="@string/lobby_name_string"
            android:textAlignment="viewStart"
            android:lines="1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/lobby_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_weight="40"
            android:ems="@integer/max_lobby_name"
            android:focusedByDefault="true"
            android:inputType="text"
            android:maxLength="@integer/max_lobby_name"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/n_players_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="100"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_layout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/n_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="70"
            android:lines="1"
            android:text="@string/n_players_string"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/n_players_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_weight="20"
            android:ems="2"
            android:inputType="number"
            android:maxLength="@integer/max_digits"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/n_rounds_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_players_layout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/n_rounds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="70"
            android:text="@string/n_rounds_string"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/n_rounds_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_weight="20"
            android:ems="2"
            android:inputType="number"
            android:maxLength="@integer/max_digits"
            android:text=""
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/setup_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/create_lobby_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_rounds_layout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>